objects/AW_Income__c.object
<CustomObject>
    <fields>
        <fullName>AW_Account_SourceSystemId__c</fullName>
        <description>Account&apos;s Source ID</description>
        <formula>AW_Account__r.FinServ__SourceSystemId__c</formula>
        <label>Account SourceSystemId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Income</relationshipLabel>
        <relationshipName>Income</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Amount__c</fullName>
        <description>Income Amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Description__c</fullName>
        <description>Enter a brief description of the income</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Frequency__c</fullName>
        <description>Frequency of Income</description>
        <label>Frequency (Months)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Last_Updated_Date_from_Source__c</fullName>
        <description>Date and Time of last update</description>
        <label>Source Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <description>The UACFID of the owner</description>
        <formula>Owner:User.AW_UACFID__c</formula>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>Select Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Source_System_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_TF_Source_System_ID__c</fullName>
        <description>External Source ID (TF)</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_UpdatedByMulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if updated by MuleSoft</description>
        <label>Updated by MuleSoft</label>
        <type>Checkbox</type>
    </fields>
    <label>Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>